@@ -5,6 +5,8 @@ dvdisaster (0.79.5-4) UNRELEASED; urgency=medium
     just the numeric part.
   * Re-implement scripts/time-stamper.bash without direct calls to
     dpkg-parsechangelog.
+  * Call ./configure script directly, instead of relying on debhelper,
+    to resolve incompatibilities with Bash-based script.
 
  -- Carlos Maddela <e7appew@gmail.com>  Mon, 14 Aug 2017 23:04:38 +1000
 
